# daiquiri

./: face_detector.py  main.py  motion.py  pyproject.toml  test.py
harness/: agent.ts  model.ts  package.json  pnpm-lock.yaml  tsconfig.json
harness/interfaces/: cli.ts
harness/prompts/: system.ts
